# tsproj

./: .gitignore  Naive_model.py  README.md  baseline.py  exp_forecasting_dl.py  feature_engine.py  forecast.py  forecasting_ml.py  forecasting_tf.py  framework.md  inference.py  kaggle_ts_lag_features.py  kaggle_ts_linear_regression.py  kaggle_ts_seasonality.py  lgbm_power_forecasting.py  power_forecasting.py  pydebug.py  pyproject.toml  requirements.txt  rm_dsstore.sh  run.py  run2.py  run_autoformer.py  run_demo.py  run_dl.py  run_lgbm.py  run_lgbm_A1F2.py  run_lstm1.py  run_lstm2.py  run_ml.py  run_original.py  run_tf.py  run_transformer_original.py  test.py  tf_power_forecasting.py  todo.py  train.py  update_codes.sh  visual.py  用户产品-调度数据需求.md
TiinyTransformer/: test.py  tiny_transformer.py
TinyTransformer/: requirements.txt
ad_models/: SOS.py
config/: config.yaml  config_loader.py  config_wind.yaml  config_wind_attn.py  config_wind_bilstm.py  config_wind_cnn_attn.py  config_wind_cnn_conv1d.py  config_wind_cnn_conv2d.py  config_wind_cnn_lstm_attn.py  config_wind_gru.py  config_wind_informer.py  config_wind_lstm.py  config_wind_lstm_attn.py  config_wind_lstm_cnn.py  config_wind_mlp.py  config_wind_rnn.py  config_wind_seq2seq_lstm.py  config_wind_tcn.py  config_wind_transformer.py  json_config_loader.py  yaml_config_loader.py
data/: Dataset_Custom.py  data_factory.py  data_loader.py  data_preprocess.py  m4.py  uea.py
data_provider/: DataLoader.py  Dataset_Custom.py  Dataset_Pred.py  Datasplitor.py  TSDataset.py  TSPredDataset.py  data_config.py  data_factory.py  (+23 more)
(+1766 files in other folders)
